# tasks_scheduling

./: Dockerfile  README.md  celeryconfig.py  docker-compose.yml  environments.py  myapp.py  pyproject.toml  worker.py
comsumer/: handler.py  tasks.py
tests/: test_add.py  test_multiply.py  test_total.py
